# psion-org2-recreate

./: .gitignore  README.md  grab.sh  screw.txt
datapack_traces/: goodpack_find_enter.txt  (+2 more)
psion-recreate/: 43-lz64.lst.annotated  CMakeLists.txt  CMakeLists.txt~  display.c  display.c~  eeprom.c  eeprom.h  embed_rom  embed_rom_in_picocode.tcl  emulator.c  emulator.c.fncall  emulator.c.save  emulator.c.switch  emulator.h  font.c  font.h  i2c.c  i2c.h  m_match_test  match.c  match.h  match_test  match_test.c  menu.c  menu.h  pack_access.txt  psion-recreate.c  psion-recreate.c~  psion_recreate.c  psion_recreate.c~  psion_recreate.h  rtc.c  rtc.h  serial.c  trace_to_off.txt  wireless.c  wireless.h
psion-recreate/oldbuild/: CMakeCache.txt  cmake_install.cmake  psion_recreate.dis  psion_recreate.elf  psion_recreate.elf.map  psion_recreate.hex  psion_recreate.uf2
psion-recreate/oldbuild/elf2uf2/boot_uf2_headers/: Makefile
psion-recreate/oldbuild/pico-sdk/docs/: Makefile
psion-recreate/oldbuild/pico-sdk/src/: cmake_install.cmake
psion-recreate/oldbuild2/: CMakeCache.txt  Makefile  cmake_install.cmake  psion_recreate.dis  psion_recreate.elf.map  psion_recreate.hex  psion_recreate.uf2
psion-recreate/oldbuild2/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
psion-recreate/oldbuild2/elf2uf2/boot_uf2_headers/: Makefile
psion-recreate/oldbuild2/pico-sdk/: Makefile  cmake_install.cmake
psion-recreate/oldbuild2/pico-sdk/docs/: Makefile
psion-recreate/oldbuild2/pico-sdk/src/: Makefile  cmake_install.cmake
psion-recreate/oldbuild2/pioasm/: cmake_install.cmake
(+221 files in other folders)
